add: organization api & update: swagger file
