# backend/urls.py
@@ -1,8 +1,9 @@
 from flask_restful import Api
 from api.auth.routes import SignupChild, Login, RefreshToken, SignupParent, SignupOrganization, SignupTeacher
-from api.student.routes import GratitudeEntry, Habits, CompleteHabit
+from api.student.routes import GratitudeEntry, Habits, CompleteHabit, ToDoListResource
 from api.parent.routes import LinkChildToParent
-from api.teacher.routes import AddStudent
+from api.teacher.routes import AddStudent, RemoveStudent
+from api.organization.routes import OrganizationStats
 
 
 api = Api()
@@ -19,10 +20,14 @@ api.add_resource(SignupTeacher, '/api/teacher/register')
 api.add_resource(GratitudeEntry, '/api/child/gratitude', '/api/child/gratitude/<int:entry_id>')
 api.add_resource(Habits, '/api/child/habit', '/api/child/habit/<int:habit_id>')
 api.add_resource(CompleteHabit, '/api/child/habit/<int:habit_id>/complete')
-
+api.add_resource(ToDoListResource, '/api/todos', '/api/todos/<int:todo_id>')
 
 # Parent
 api.add_resource(LinkChildToParent, '/api/parent/link-child', '/api/parent/unlink-child/<int:child_id>')
 
 # Teacher
 api.add_resource(AddStudent, '/api/teacher/add-student')
+api.add_resource(RemoveStudent, '/api/teacher/remove-student/<int:student_id>')
+
+# Organization
+api.add_resource(OrganizationStats, '/api/organization/stats')
